--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "author": "Fortune",
+  "license": "ISC",
   "engines": {
     "node": "16.4.0"
   },
 
   "scripts": {
     "client": "cd client && npm start",
-    "server": "node index.js",
+    "start": "nodemon server.js",
     "build": "cd client && npm run build",
-    "dev": "concurrently \"npm run client\" \"nodemon\""
+    "dev": "concurrently \"npm run client\" \"npm run start\""
   },
-  "author": "Fortune",
-  "license": "ISC",
+
   "dependencies": {
     "axios": "^0.22.0",
     "cors": "^2.8.5",
