--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "start": "nodemon server.js",
-    "build": "cd client && npm run build",
+    "build": "cd client && npm install && npm run build",
     "dev": "concurrently \"npm run client\" \"npm run start\""
   },
 
